dev/test_programs/INVALID/group1/stmt5.go
package main;

func main(){
	var x int = 1;
	if x > 0 {
		print("test");
	}
	else {
		x = 4;
	}
}
